--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,11 +1,11 @@
 apply plugin: 'com.android.application'
 android {
-  compileSdkVersion 27
-  buildToolsVersion "27.+"
+  compileSdkVersion 21
+  buildToolsVersion "21.1.0"
   defaultConfig {
     applicationId "net.ramptors.asincro"
     minSdkVersion 15
-    targetSdkVersion 28
+    targetSdkVersion 21
     versionCode 1
     versionName "1.0"
   }
@@ -17,10 +17,9 @@ android {
   }
 }
 dependencies {
-  compile ('android.arch.core:runtime:+') {
-    force = true
-  }
-	compile 'com.android.support:design:27.+'
-	compile 'com.android.support:appcompat-v7:27.+'
+  compile 'com.android.support:support-v4:26.0.2'
+  compile 'com.android.support:appcompat-v7:26.0.2'
+  compile 'com.android.support:design:26.0.2'
+	
   compile fileTree(dir: 'libs', include: ['*.jar'])
 }
