--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,9 +17,8 @@ android {
   }
 }
 dependencies {
-  compile 'com.android.support:support-v4:26.0.2'
-  compile 'com.android.support:appcompat-v7:26.0.2'
-  compile 'com.android.support:design:26.0.2'
-	
+  def version_soporte = "26.0.2"
+  implementation "com.android.support:appcompat-v7:$version_soporte"
+  implementation "com.android.support:design:$version_soporte"
   compile fileTree(dir: 'libs', include: ['*.jar'])
 }
