--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,22 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="net.ramptors.asincro" >
-
-    <application
-        android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name"
-        android:theme="@style/AppTheme"
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" 
+  package="net.ramptors.asincro">
+  <uses-permission android:name="android.permission.INTERNET"/>
+  <application android:allowBackup="true" 
+    android:icon="@drawable/ic_launcher" 
+    android:label="@string/app_name" 
+    android:theme="@style/AppTheme"
 		android:resizeableActivity = "true">
-        <activity
-            android:name=".MainActivity"
-            android:label="@string/app_name" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-    </application>
-
+    <activity android:name='.CtrlPasatiempos'>
+      <intent-filter>
+        <category android:name='android.intent.category.LAUNCHER'/>
+        <action android:name='android.intent.action.MAIN'/>
+      </intent-filter>
+    </activity>
+    <activity android:name=".CtrlPasatiempoNuevo" 
+      android:label="@string/pasatiempo_nuevo" 
+      android:parentActivityName=".CtrlPasatiempos">
+      <!-- meta-data para Android 4.0 y menores. -->
+      <meta-data android:name="android.support.PARENT_ACTIVITY" 
+        android:value=".CtrlPasatiempos" />
+    </activity>
+    <activity android:name=".CtrlPasatiempo" 
+      android:parentActivityName=".CtrlPasatiempos">
+      <meta-data android:name="android.support.PARENT_ACTIVITY" 
+        android:value=".CtrlPasatiempos" />
+    </activity>
+  </application>
 </manifest>
