--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,17 @@
 buildscript {
   repositories {
     jcenter()
+    google()
 	  mavenCentral()
   }
   dependencies {
-    classpath 'com.android.tools.build:gradle:3+'
+    classpath 'com.android.tools.build:gradle:3.1.2'
   }
 }
 allprojects {
   repositories {	
     jcenter()
+    google()
 	  mavenCentral()
   }
 }
